--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-23a2b76b.js">
+		<link rel="modulepreload" href="/./_app/start-a5004b86.js">
 		<link rel="modulepreload" href="/./_app/chunks/vendor-1540f193.js">
-		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-e9da2435.js">
-		<link rel="modulepreload" href="/./_app/pages/index.svelte-56e4ba1b.js">
+		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-ddd4681e.js">
+		<link rel="modulepreload" href="/./_app/pages/index.svelte-3cf112e5.js">
 		<link rel="stylesheet" href="/./_app/assets/start-a97448ed.css">
 		<link rel="stylesheet" href="/./_app/assets/vendor-b5c8cf01.css">
-		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-b889a6e2.css">
+		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-b50531fe.css">
 		<link rel="stylesheet" href="/./_app/assets/pages/index.svelte-51825280.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-23a2b76b.js";
+			import { start } from "/./_app/start-a5004b86.js";
 			start({
 				target: document.body,
 				paths: {"base":"","assets":"/."},
@@ -36,8 +36,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./_app/pages/__layout.svelte-e9da2435.js"),
-						import("/./_app/pages/index.svelte-56e4ba1b.js")
+						import("/./_app/pages/__layout.svelte-ddd4681e.js"),
+						import("/./_app/pages/index.svelte-3cf112e5.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -61,10 +61,10 @@
 	<hr class="w-64  rounded-xl border-t-8 border-black">
 	
 </header>
-	<div class="tabs sticky top-0 mx-0 z-10 px-2 sm:p-4  sm:pb-0 mt-2 mb-2 border-b-2 rounded-b-2xl rounded-t-lg border-red-200 bg-white bg-opacity-25 svelte-7o9efu"><ul class="flex justify-center p-0 list-none text-center"><li class="p-0 m-0 sm:mx-0.5 cursor-pointer select-none text-black sm:font-bold hover:text-red-400 hover:bg-red-50 svelte-7o9efu active">Find A Puppy
-	</li><li class="p-0 m-0 sm:mx-0.5 cursor-pointer select-none text-black sm:font-bold hover:text-red-400 hover:bg-red-50 svelte-7o9efu  nonactive">Sell A Puppy
-	</li><li class="p-0 m-0 sm:mx-0.5 cursor-pointer select-none text-black sm:font-bold hover:text-red-400 hover:bg-red-50 svelte-7o9efu  nonactive">Puppy Lists
-	</li><li class="p-0 m-0 sm:mx-0.5 cursor-pointer select-none text-black sm:font-bold hover:text-red-400 hover:bg-red-50 svelte-7o9efu  nonactive">Add Poll
+	<div class="tabs sticky top-0 mx-0 z-10 px-2 sm:p-4  sm:pb-0 mt-2 mb-2 border-b-2 rounded-b-2xl rounded-t-lg border-red-200 bg-white bg-opacity-25 svelte-7o9efu"><ul class="flex justify-center p-0 list-none text-center"><li class="p-0 m-0 sm:mx-0.5 cursor-pointer select-none text-black hover:text-red-400 hover:bg-red-50 svelte-7o9efu active">Find A Puppy
+	</li><li class="p-0 m-0 sm:mx-0.5 cursor-pointer select-none text-black hover:text-red-400 hover:bg-red-50 svelte-7o9efu  nonactive">Sell A Puppy
+	</li><li class="p-0 m-0 sm:mx-0.5 cursor-pointer select-none text-black hover:text-red-400 hover:bg-red-50 svelte-7o9efu  nonactive">Puppy Lists
+	</li><li class="p-0 m-0 sm:mx-0.5 cursor-pointer select-none text-black hover:text-red-400 hover:bg-red-50 svelte-7o9efu  nonactive">Add Poll
 	</li></ul>
 </div>
 <div class="flex flex-col items-center min-h-screen max-w-md "><br>
